# 3D-Spinal-Alignment-Analyzer

./: .gitattributes  README.md
AlternativeMethods/Xing2017Method/: main.py  software_flow.py  vtk_convenience.py
SlicerPlugins/: CMakeLists.txt
SlicerPlugins/Dimensions/: .Dimensions.py.swp  Dimensions.py
SlicerPlugins/Dimensions/Resources/Scripts/: .morphology.py.swp  morphology.py
SlicerPlugins/Slopes/: CMakeLists.txt  Slopes.py
SlicerPlugins/Slopes/Resources/Scripts/: morphology.py  slopes_cli.py
SlicerPlugins/Slopes/Resources/UI/: Slopes.ui
